# react-django-sns

./: .gitignore  .tool-versions  README.md  pyproject.toml
api_dm/: serializers.py  views.py
api_user/: serializers.py  urls.py  views.py
backend/api_dm/: serializers.py  urls.py
backend/core/: custompermissions.py
backend/core/migrations/: 0001_initial.py
backend/sns/: settings.py  urls.py
core/: admin.py  models.py
frontend/sns-react/: .gitignore  package-lock.json  package.json
frontend/sns-react/public/: index.html
frontend/sns-react/src/: App.css  App.js  index.js
frontend/sns-react/src/components/: Ask.js  InboxDM.js  Login.js  Main.js  Navbar.js  Profile.js  ProfileManager.js
frontend/sns-react/src/context/: ApiContext.js
sns/: settings.py
